# north

./: .gitignore  CMakeLists.txt  FindLLVM.cmake  LICENSE.TXT  README.md
include/: Diagnostic.h
include/AST/: AST.h  Declarations.h  Dumper.h  Expressions.h  Literals.h  Statements.h  Visitor.h
include/Grammar/: Lexer.h  Parser.h  Token.h
include/IR/: IRBuilder.h
include/Targets/: BuilderBase.h  CBuilder.h  IRBuilder.h
include/Type/: Module.h  Scope.h  Type.h  TypeInference.h
libnorth/: CMakeLists.txt
libnorth/include/: Diagnostic.h
libnorth/include/AST/: AST.h  Declarations.h  Expressions.h  Statements.h  Visitor.h
libnorth/include/AST/Declarations/: AliasDecl.h  Declaration.h  EnumDecl.h  FunctionDecl.h  GenericDecl.h  InterfaceDecl.h  RangeDecl.h  StructDecl.h  TupleDecl.h  TypeDef.h  UnionDecl.h  VarDecl.h
libnorth/include/AST/Expressions/: ArrayExpr.h  ArrayIndexExpr.h  AssignExpr.h  BinaryExpr.h  CallExpr.h  ForExpr.h  IfExpr.h  LiteralExpr.h  QualifiedIdentifierExpr.h  RangeExpr.h  StructInitExpr.h  UnaryExpr.h  WhileExpr.h
libnorth/include/AST/Statements/: BlockStmt.h  OpenStmt.h  ReturnStmt.h
libnorth/include/Grammar/: Lexer.h  Parser.h  Token.h
libnorth/include/Targets/: BuilderBase.h  CBuilder.h  IRBuilder.h
libnorth/include/Type/: Module.h  Scope.h  Type.h  TypeInference.h
libnorth/include/Utils/: FileSystem.h
libnorth/src/AST/: CallExpr.cpp  FunctionDecl.cpp  QualifiedIdentifierExpr.cpp
libnorth/src/Grammar/: Lexer.cpp  Parser.cpp  Token.cpp
libnorth/src/Targets/C/: DeclBuilder.cpp  ExprBuider.cpp  StmtBuilder.cpp
libnorth/src/Targets/IR/: DeclBuilder.cpp  ExprBuilder.cpp  StmtBuilder.cpp  Utils.cpp
libnorth/src/Type/: Module.cpp  Scope.cpp  Type.cpp  TypeInference.cpp
libnorth/src/Utils/: FileSystem.cpp
libnorth/src/ast/: CallExpr.cpp  FunctionDecl.cpp
northc/: CMakeLists.txt
northc/include/: CLI.h  Commands.h  Dumper.h  Opt.h  Trace.h
northc/src/: CLI.cpp  Dumper.cpp  Main.cpp  Opt.cpp  Trace.cpp
src/: Diagnostic.cpp  Main.cpp
src/AST/: Dumper.cpp
src/Grammar/: Lexer.cpp  Parser.cpp  Token.cpp
src/IR/: DeclBuilder.cpp  ExprBuilder.cpp  IRBuilder.cpp  StmtBuilder.cpp  Utils.cpp
src/Targets/C/: DeclBuilder.cpp  ExprBuider.cpp  StmtBuilder.cpp
src/Targets/IR/: DeclBuilder.cpp  ExprBuilder.cpp  StmtBuilder.cpp  Utils.cpp
src/Type/: Module.cpp  Scope.cpp  Type.cpp  TypeInference.cpp
test/: CMakeLists.txt  Lexer.cpp  Parser.cpp
test/examples/: generics.n
test/tests/: 001.n
